[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/objects/Fireball/Fireball.gd" type="Script" id=1]
[ext_resource path="res://src/objects/Fireball/shadow.png" type="Texture" id=2]
[ext_resource path="res://src/objects/Fireball/sprite_sheet.png" type="Texture" id=3]
[ext_resource path="res://src/objects/Fireball/particles_sprite_sheet.png" type="Texture" id=4]
[ext_resource path="res://src/objects/Fireball/explode_anim.tres" type="Animation" id=5]
[ext_resource path="res://src/objects/Fireball/flying_anim.tres" type="Animation" id=6]
[ext_resource path="res://src/objects/Fireball/explosion.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 6.04737
height = 24.5929

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 20.0
flag_align_y = true
flag_rotate_y = true
flag_disable_z = true
spread = 90.0
flatness = 0.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 1.0
tangential_accel = 0.0
tangential_accel_random = 1.0
damping = 0.0
damping_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 1.0
hue_variation_random = 1.0
anim_speed = 1.5
anim_speed_random = 1.0
anim_offset = 1.0
anim_offset_random = 1.0
anim_loop = true
_sections_unfolded = [ "Angle", "Animation", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Orbit Velocity", "Radial Accel", "Spread", "Tangential Accel" ]

[node name="Fireball" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Ground" type="Sprite" parent="." index="0"]

visible = false
scale = Vector2( 1.5, 1.5 )
z_index = 3
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Shadow" type="Sprite" parent="." index="1"]

scale = Vector2( 1.5, 1.5 )
z_index = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 4.51669, -0.886315 )
rotation = 1.56705
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="3"]

z_index = 7
texture = ExtResource( 3 )
hframes = 4
_sections_unfolded = [ "Animation", "Visibility", "Z Index" ]

[node name="Particle" type="Particles2D" parent="Sprite" index="0"]

emitting = true
amount = 16
lifetime = 0.5
one_shot = false
preprocess = 0.5
speed_scale = 1.0
explosiveness = 0.2
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 2 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 2
v_frames = 2
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/explode = ExtResource( 5 )
anims/flying = ExtResource( 6 )
blend_times = [  ]

[node name="DeathTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = false

[node name="Explosion" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 7 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]


